--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 		Let’s say you have an idea for a trading strategy and you’d like to evaluate it with historical
 		data and see how it behaves. PyAlgoTrade allows you to do so with minimal effort.
         </p>
-        <p><a class="btn btn-lg btn-success" href="http://gbeced.github.io/pyalgotrade/docs/v0.20/html/tutorial.html" role="button">Quickstart</a></p>
+        <p>
+		<a class="btn btn-lg btn-success" href="http://gbeced.github.io/pyalgotrade/docs/v0.20/html/tutorial.html" role="button">Quickstart (deprecated)</a>
+		<a class="btn btn-lg btn-success" href="https://basana.readthedocs.io/en/latest/" role="button">Basana Quickstart</a>
+	</p>
       </div>
 
       <!-- Example row of columns -->
