--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
         <p>
 		<a class="btn btn-lg btn-success" href="http://gbeced.github.io/pyalgotrade/docs/v0.20/html/tutorial.html" role="button">Quickstart (deprecated)</a>
-		<a class="btn btn-lg btn-success" href="https://basana.readthedocs.io/en/latest/" role="button">Basana Quickstart</a>
+		<a class="btn btn-lg btn-success" href="https://basana.readthedocs.io/en/latest/quickstart.html" role="button">Basana Quickstart</a>
 	</p>
       </div>
 
